test_suite/tests/ui/inject_scope/unknown_scope.rs
use dilib::{Singleton, Inject};

#[derive(Inject)]
struct MyStruct {
    #[inject(scope="unique")]
    a: Singleton<usize>,
}

fn main(){}